[gd_scene load_steps=4 format=2]

[ext_resource path="res://SelectShip.gd" type="Script" id=1]
[ext_resource path="res://Alert.gd" type="Script" id=2]
[ext_resource path="res://resources/ui/menu_theme.tres" type="Theme" id=3]

[node name="SelectShip" type="Control"]
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 14.0
text = "Select ship:"

[node name="Constructor" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 640.0
margin_bottom = 46.0
text = "Tellurian Constructor"

[node name="Cargoship" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 640.0
margin_bottom = 78.0
text = "Selenite Cargoship"

[node name="StartBattle" type="Button" parent="."]
margin_left = 640.0
margin_top = 500.0
margin_right = 1280.0
margin_bottom = 540.0
text = "Start battle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 1280.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 640.0
margin_bottom = 14.0
text = "Select your enemy"

[node name="EConstructor" type="Button" parent="VBoxContainer2"]
margin_top = 18.0
margin_right = 640.0
margin_bottom = 46.0
text = "Tellurian Constructor"

[node name="ECargoship" type="Button" parent="VBoxContainer2"]
margin_top = 50.0
margin_right = 640.0
margin_bottom = 78.0
text = "Selenite Cargoship"

[node name="Alert" type="PopupDialog" parent="."]
margin_left = 640.0
margin_top = 200.0
margin_right = 1280.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="Button" type="Button" parent="Alert"]
visible = false
anchor_top = 0.872
anchor_bottom = 0.963
margin_left = 200.0
margin_right = 400.0
text = "OK"

[node name="Label" type="Label" parent="Alert"]
visible = false
anchor_left = 0.101
anchor_top = 0.107
anchor_right = 0.101
anchor_bottom = 0.107
margin_right = 40.0
margin_bottom = 14.0
text = "Please select a ship!"

[connection signal="pressed" from="VBoxContainer/Constructor" to="." method="_on_Constructor_pressed"]
[connection signal="pressed" from="VBoxContainer/Cargoship" to="." method="_on_Cargoship_pressed"]
[connection signal="pressed" from="StartBattle" to="." method="_on_StartBattle_pressed"]
[connection signal="pressed" from="VBoxContainer2/EConstructor" to="." method="_on_EConstructor_pressed"]
[connection signal="pressed" from="VBoxContainer2/ECargoship" to="." method="_on_ECargoship_pressed"]
[connection signal="pressed" from="Alert/Button" to="Alert" method="_on_Button_pressed"]
